# sistema-controle-aulas

./: .gitignore  01_primeiros_estudos_python.ipynb  02_funcoes_e_arquivos.ipynb  03_sistema_com_menu.ipynb  04_validacao_e_tratamento_de_erros.ipynb  05_orientacao_a_objetos.ipynb  LICENSE  README.md  alunos.json  pyproject.toml  sistema_alunos.py  test_sistema_alunos.py
.github/workflows/: ci.yml
